Rearranged school websites buttons

--- a/staff.html
+++ b/staff.html
@@ -156,9 +156,8 @@
                     <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)"></button></a>
                     <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerTeacher (GradeBook &amp; Attendance)"></button></a>
                     <a href="https://www.centinela.k12.ca.us/staff_only"><button><img class="img-responsive" href="" src="images/buttons/staff-only.png" alt="Restricted Staff Area (Staff Resources - District Website)"></button></a>
+                    <a href="https://teacher.goguardian.com/#/classrooms/active"><button><img class="img-responsive" href="" src="images/buttons/GoGuardian.png" alt="Go Guardian" title="Go Guardian"></button></a>
                 </div>
-
-
             </div>
         </section>
 
@@ -204,6 +203,7 @@
             </div>
             <div class="row button-row" id="digitalTextbooksButtonRow">
                 <a href="https://my.hrw.com/sp/access?sp=hrw&amp;connection=CA-CVUHSD-00067204"><button><img class="img-responsive" href="" src="images/buttons/HMH.png" alt="Holt McDougal (Online Textbooks)"></button></a>
+                <a href="https://learningsite.waysidepublishing.com/"><button><img class="img-responsive" href="" src="images/buttons/Wayside-Publishing.png" alt="Wayside Publishing" title="Wayside Publishing"></button></a>
             </div>
         </section>
 
@@ -246,6 +246,11 @@
                     <a href="http://www.lloydehs.org/"><button><img class="img-responsive" href="" src="images/buttons/LL-Website.png" alt="Lloyde Website"></button></a>
                 </div>
                 <div>
+                    <a href="https://www.lawndalehs.org/"><button><img class="img-responsive" href="" src="images/buttons/LW-Website.png" alt="Lawndale Website"></button></a>
+                    <a href="https://www.leuzinger.org/"><button><img class="img-responsive" href="" src="images/buttons/LZ-Website.png" alt="Leuzinger Website"></button></a>
+                    <a href="http://www.hhscougars.org/"><button><img class="img-responsive" href="" src="images/buttons/HW-Website.png" alt="Hawthorne Website"></button></a>
+                </div>
+                <div>
                     <a href="https://admin.centinela.k12.ca.us/"><button><img class="img-responsive" href="" src="images/buttons/Edlio-CVUHSD.png" alt="Edlio Website Administraton - Centinela Valley Union High School District (CVUHSD)"></button></a>
                     <a href="https://cvalternatives.edlioadmin.com/apps/login/"><button><img class="img-responsive" href="" src="images/buttons/Edlio-CVISS.png" alt="Edlio Website Administraton - Centinela Valley Independent Study"></button></a>
                     <a href="https://lloydehs.edlioadmin.com/apps/login/"><button><img class="img-responsive" href="" src="images/buttons/Edlio-LL.png" alt="Edlio Website Administration - Lloyde"></button></a>
@@ -256,12 +261,6 @@
                     <a href="https://hhscougars.edlioadmin.com/apps/login/"><button><img class="img-responsive" href="" src="images/buttons/Edlio-HW.png" alt="Edlio Website Administration - Hawthorne"></button></a>
                     <a href="https://leuzinger.edlioadmin.com/apps/login/"><button><img class="img-responsive" href="" src="images/buttons/Edlio-LZ.png" alt="Edlio Website Administration - Leuzinger"></button></a>
 
-                </div>
-                <div>
-                    <a href="https://www.lawndalehs.org/"><button><img class="img-responsive" href="" src="images/buttons/LW-Website.png" alt="Lawndale Website"></button></a>
-                    <a href="https://www.leuzinger.org/"><button><img class="img-responsive" href="" src="images/buttons/LZ-Website.png" alt="Leuzinger Website"></button></a>
-
-                    <a href="http://www.hhscougars.org/"><button><img class="img-responsive" href="" src="images/buttons/HW-Website.png" alt="Hawthorne Website"></button></a>
                 </div>
             </div>
             <!-- /.schoolWebsitesButtonRow -->
