--- a/student.html
+++ b/student.html
@@ -143,6 +143,7 @@
             </div>
             <div class="row button-row" id="digitalTextbooksButtonRow">
                 <a href="https://my.hrw.com/sp/access?sp=hrw&amp;connection=CA-CVUHSD-00067204"><button><img class="img-responsive" href="" src="images/buttons/HMH.png" alt="Holt McDougal (Online Textbooks)"></button></a>
+                <a href="https://learningsite.waysidepublishing.com/"><button><img class="img-responsive" href="" src="images/buttons/Wayside-Publishing.png" alt="Wayside Publishing" title="Wayside Publishing"></button></a>
             </div>
         </section>
 
@@ -186,7 +187,6 @@
                 <div>
                     <a href="https://www.lawndalehs.org/"><button><img class="img-responsive" href="" src="images/buttons/LW-Website.png" alt="Lawndale Website"></button></a>
                     <a href="https://www.leuzinger.org/"><button><img class="img-responsive" href="" src="images/buttons/LZ-Website.png" alt="Leuzinger Website"></button></a>
-
                     <a href="http://www.hhscougars.org/"><button><img class="img-responsive" href="" src="images/buttons/HW-Website.png" alt="Hawthorne Website"></button></a>
                 </div>
             </div>
