The student portal page now has a red theme. A new CSS file is being used.

--- a/student.html
+++ b/student.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
     <link href="css/grid-system.css" rel="stylesheet">
     <!-- Grid System -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-red.css" rel="stylesheet">
     <!-- All styling outside the grid system is done here-->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
