Added Google Sheets iframe in the all tools section, which got renamed to all links.

--- a/staff.html
+++ b/staff.html
@@ -269,13 +269,16 @@
         <section class="blue-section" id="allTools-blueSection">
             <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="webAdmin-collapseToggle">
             <div class="section-header">
-                <h3>ALL TOOLS</h3>
+                <h3>ALL LINKS</h3>
                 <label for="webAdmin-collapseToggle">
                     <div class="open-column-button"></div>
                 </label>
             </div>
-            <div class="row button-row admin-links" id="webAdminButtonRow">
-                <a href="https://www.blackboardconnect.com/signin/default.aspx">Blackboard Connect - Admin (Parent Communication)</a>
+            <!-- <div class="row button-row admin-links" id="webAdminButtonRow"> -->
+            <div class="row admin-links" id="webAdminButtonRow">
+                <iframe class="google-sheet" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSOPMzFTLmTXsOzY172KN_3IaJqeO9bLPl_3TIgc_bBQiWEanznykV6cEiPBuV9WUHEnL2vesphHEWZ/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false">
+            </iframe>
+                <!-- <a href="https://www.blackboardconnect.com/signin/default.aspx">Blackboard Connect - Admin (Parent Communication)</a>
                 <a href="https://teacher.blackboardconnected.com/Login.aspx">Blackboard Connect - Teacher (Parent Communication)</a>
                 <a href="https://www.brainpop.com/">BrainPop</a>
                 <a href="https://centinela.instructure.com/">Canvas (Learning Management System)</a>
@@ -321,7 +324,7 @@
                 <a href="https://schools.shmoop.com/login/centinela-valley-UHSD">Shmoop</a>
                 <a href="http://cvsmarte/">SmarteTools</a>
                 <a href="https://portal.centinela.k12.ca.us/student.html">Student Portal</a>
-                <a href="http://turnitin.com/">TurnItIn.com (originality check &amp; feedback)</a>
+                <a href="http://turnitin.com/">TurnItIn.com (originality check &amp; feedback)</a> -->
             </div>
         </section>
     </div>
