Fixed a couple of button links in both the staff and student portal pages.

--- a/student.html
+++ b/student.html
@@ -183,14 +183,14 @@
             </div>
             <div id="schoolWebsitesButtonRow" class="row">
                 <div>
-                    <a href="https://centinela.k12.ca.us"><button><img class="img-responsive" href="" src="images/buttons/CV-Website.png" alt="CV Website"></button></a>
+                    <a href="https://www.centinela.k12.ca.us/"><button><img class="img-responsive" href="" src="images/buttons/CV-Website.png" alt="CV Website"></button></a>
                     <a href="https://www.cvalternatives.org/"><button><img class="img-responsive" href="" src="images/buttons/CVISS-Website.png" alt="CVISS Website"></button></a>
-                    <a href="http://www.lloydehs.org/"><button><img class="img-responsive" href="" src="images/buttons/LL-Website.png" alt="Lloyde Website"></button></a>
+                    <a href="https://www.lloydehs.org"><button><img class="img-responsive" href="" src="images/buttons/LL-Website.png" alt="Lloyde Website"></button></a>
                 </div>
                 <div>
                     <a href="https://www.lawndalehs.org/"><button><img class="img-responsive" href="" src="images/buttons/LW-Website.png" alt="Lawndale Website"></button></a>
                     <a href="https://www.leuzinger.org/"><button><img class="img-responsive" href="" src="images/buttons/LZ-Website.png" alt="Leuzinger Website"></button></a>
-                    <a href="http://www.hhscougars.org/"><button><img class="img-responsive" href="" src="images/buttons/HW-Website.png" alt="Hawthorne Website"></button></a>
+                    <a href="https://www.hhscougars.org/"><button><img class="img-responsive" href="" src="images/buttons/HW-Website.png" alt="Hawthorne Website"></button></a>
                 </div>
             </div>
             <!-- /.schoolWebsitesButtonRow -->
