--- a/staff.html
+++ b/staff.html
@@ -114,7 +114,7 @@
                 </div>
 
                 <div>
-                    <a href="https://sso.centinela.k12.ca.us/adfs/ls/?wa=wsignin1.0&amp;wtrealm=https%3a%2f%2fmail.centinela.k12.ca.us%2fowa%2f&amp;wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f&amp;wct=2017-08-21T18%3a05%3a05Z"><button><img class="img-responsive" href="" src="images/buttons/password-portal.png" alt="Password Assistance"></button></a>
+                    <a href="http://updatemanager:9251/showLogin.cc"><button><img class="img-responsive" href="" src="images/buttons/password-portal.png" alt="Password Assistance"></button></a>
                     <a href="https://cvprintcenter.myprintdesk.net/DSF/smartstore.aspx#!/Storefront"><button><img class="img-responsive" href="" src="images/buttons/print-center.png" alt="Print Center"></button></a>
                     <a href="https://login.schooldude.com/mlogin?productid=community"><button><img class="img-responsive" href="" src="images/buttons/school-dude.png" alt="School Dude"></button></a>
                 </div>
@@ -155,7 +155,7 @@
                 <div>
                     <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)"></button></a>
                     <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerTeacher (GradeBook &amp; Attendance)"></button></a>
-                    <a href="https://www.centinela.k12.ca.us/staff_only"><button><img class="img-responsive" href="" src="images/buttons/staff-only.png" alt="Restricted Staff Area (Staff Resources - District Website)"></button></a>
+                    <a href="http://www.centinela.k12.ca.us/staff_only"><button><img class="img-responsive" href="" src="images/buttons/staff-only.png" alt="Restricted Staff Area (Staff Resources - District Website)"></button></a>
                     <a href="https://teacher.goguardian.com/#/classrooms/active"><button><img class="img-responsive" href="" src="images/buttons/GoGuardian.png" alt="Go Guardian" title="Go Guardian"></button></a>
                 </div>
             </div>
@@ -243,15 +243,15 @@
                 <div>
                     <a href="https://centinela.k12.ca.us"><button><img class="img-responsive" href="" src="images/buttons/CV-Website.png" alt="CV Website"></button></a>
                     <a href="https://www.cvalternatives.org/"><button><img class="img-responsive" href="" src="images/buttons/CVISS-Website.png" alt="CVISS Website"></button></a>
-                    <a href="http://www.lloydehs.org/"><button><img class="img-responsive" href="" src="images/buttons/LL-Website.png" alt="Lloyde Website"></button></a>
+                    <a href="https://www.lloydehs.org"><button><img class="img-responsive" href="" src="images/buttons/LL-Website.png" alt="Lloyde Website"></button></a>
                 </div>
                 <div>
                     <a href="https://www.lawndalehs.org/"><button><img class="img-responsive" href="" src="images/buttons/LW-Website.png" alt="Lawndale Website"></button></a>
                     <a href="https://www.leuzinger.org/"><button><img class="img-responsive" href="" src="images/buttons/LZ-Website.png" alt="Leuzinger Website"></button></a>
-                    <a href="http://www.hhscougars.org/"><button><img class="img-responsive" href="" src="images/buttons/HW-Website.png" alt="Hawthorne Website"></button></a>
+                    <a href="https://www.hhscougars.org/"><button><img class="img-responsive" href="" src="images/buttons/HW-Website.png" alt="Hawthorne Website"></button></a>
                 </div>
                 <div>
-                    <a href="https://admin.centinela.k12.ca.us/"><button><img class="img-responsive" href="" src="images/buttons/Edlio-CVUHSD.png" alt="Edlio Website Administraton - Centinela Valley Union High School District (CVUHSD)"></button></a>
+                    <a href="http://admin.centinela.k12.ca.us/"><button><img class="img-responsive" href="" src="images/buttons/Edlio-CVUHSD.png" alt="Edlio Website Administraton - Centinela Valley Union High School District (CVUHSD)"></button></a>
                     <a href="https://cvalternatives.edlioadmin.com/apps/login/"><button><img class="img-responsive" href="" src="images/buttons/Edlio-CVISS.png" alt="Edlio Website Administraton - Centinela Valley Independent Study"></button></a>
                     <a href="https://lloydehs.edlioadmin.com/apps/login/"><button><img class="img-responsive" href="" src="images/buttons/Edlio-LL.png" alt="Edlio Website Administration - Lloyde"></button></a>
                 </div>
