Made the Google Docs iFrame responsive by adding media queries. Also changed text of Media resources to Digital Library Resources

--- a/student.html
+++ b/student.html
@@ -52,7 +52,7 @@
                         <a href="#digitalTextbooks-blueSection">Digital Textbooks</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#mediaResources-blueSection">Media Resources</a>
+                        <a href="#mediaResources-blueSection">Digital Library Resources</a>
                     </li>
                     <li class="mobile-collapse-links">
                         <a href="#schoolWebsites-blueSection">School Websites</a>
@@ -153,7 +153,7 @@
         <section class="blue-section" id="mediaResources-blueSection">
             <input class="checkbox-hack blueSection-collapseToggle" id="mediaResources-collapseToggle" type="checkbox">
             <div class="section-header">
-                <h3>Media Resources</h3>
+                <h3>Digital Library Resources</h3>
                 <label for="mediaResources-collapseToggle">
                     <div class="open-column-button"></div>
                 </label>
