--- a/staff.html
+++ b/staff.html
@@ -58,7 +58,7 @@
                         <a href="#digitalTextbooks-blueSection">Digital Textbooks</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#mediaResources-blueSection">Media Resources</a>
+                        <a href="#mediaResources-blueSection">Digital Library Resources</a>
                     </li>
                     <li class="mobile-collapse-links">
                         <a href="#schoolWebsites-blueSection">School Websites</a>
@@ -210,7 +210,7 @@
         <section class="blue-section" id="mediaResources-blueSection">
             <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="mediaResources-collapseToggle">
             <div class="section-header">
-                <h3>Media Resources</h3>
+                <h3>Digital Library Resources</h3>
                 <label for="mediaResources-collapseToggle">
                     <div class="open-column-button"></div>
                 </label>
