--- a/staff.html
+++ b/staff.html
@@ -241,7 +241,7 @@
             </div>
             <div id="schoolWebsitesButtonRow" class="row">
                 <div>
-                    <a href="https://centinela.k12.ca.us"><button><img class="img-responsive" href="" src="images/buttons/CV-Website.png" alt="CV Website"></button></a>
+                    <a href="https://www.centinela.k12.ca.us"><button><img class="img-responsive" href="" src="images/buttons/CV-Website.png" alt="CV Website"></button></a>
                     <a href="https://www.cvalternatives.org/"><button><img class="img-responsive" href="" src="images/buttons/CVISS-Website.png" alt="CVISS Website"></button></a>
                     <a href="https://www.lloydehs.org"><button><img class="img-responsive" href="" src="images/buttons/LL-Website.png" alt="Lloyde Website"></button></a>
                 </div>
