Changes done as suggested by Molly: In the Student Portal quick links section, I removed the powerSchool administrator button and replaced it with the PowerSchool Parent/Student button. The canvas button was added as well. Other changes were done to other buttons as well."

--- a/student.html
+++ b/student.html
@@ -80,9 +80,10 @@
                 </label>
             </div>
             <div class="row button-row" id="quickLinksButtonRow">
-                <a href="https://powerschool.centinela.k12.ca.us/admin/pw.html"><button><img class="img-responsive" href="" src="images/buttons/ps.png" alt="PowerSchool Administrator"></button></a>
+                <a href="https://powerschool.centinela.k12.ca.us/public/"><button><img class="img-responsive" href="" src="images/buttons/PS-student.png" alt="PowerSchool Student/Parent Portal"></button></a>
                 <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
                 <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
+                <a href="https://centinela.instructure.com/"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
             </div>
         </section>
 
