--- a/staff.html
+++ b/staff.html
@@ -64,7 +64,7 @@
                         <a href="#schoolWebsites-blueSection">School Websites</a>
                     </li>
                     <li>
-                        <a href="student.html">Student Portal</a>
+                        <a href="student.html" target="_blank">Student Portal</a>
                     </li>
                     <li>
                         <a href="#allTools-blueSection">All Links</a>
@@ -89,10 +89,11 @@
                 </label>
             </div>
             <div class="row button-row" id="quickLinksButtonRow">
-                <a href="https://powerschool.centinela.k12.ca.us/admin/pw.html"><button><img class="img-responsive" href="" src="images/buttons/ps.png" alt="PowerSchool Administrator"></button></a>
+                <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerSchool Teacher" alt="PowerSchool Teacher"></button></a>
                 <a href="https://sso.centinela.k12.ca.us/adfs/ls/?wa=wsignin1.0&amp;wtrealm=https%3a%2f%2fmail.centinela.k12.ca.us%2fowa%2f&amp;wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f&amp;wct=2017-08-21T18%3a05%3a05Z"><button><img class="img-responsive" href="" src="images/buttons/outlook.png" alt="Outlook Email"></button></a>
                 <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
                 <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
+                <a href="https://cvprintcenter.myprintdesk.net/DSF/smartstore.aspx#!/Storefront"><button><img class="img-responsive" href="" src="images/buttons/print-center.png" alt="Print Center"></button></a>
                 <a href="https://helpdesk.centinela.k12.ca.us"><button><img class="img-responsive" href="" src="images/buttons/helpdesk.png" alt="Helpdesk (CV It Department)"></button></a>
             </div>
         </section>
@@ -150,13 +151,15 @@
                     <a href="https://login.frontlineeducation.com/login?signin=2016ab4880f0c15acd277b718071c1fd&amp;productId=ABSMGMT&amp;clientId=ABSMGMT#/login"><button><img class="img-responsive" href="" src="images/buttons/aesop.png" alt="Frontline (Absence Management/Subfinder)"></button></a>
                     <a href="https://teacher.blackboardconnected.com/Login.aspx"><button><img class="img-responsive" href="" src="images/buttons/BB-Teacher.png" alt="Blackboard Connect - Teacher: (Parent Communication)"></button></a>
                     <a href="https://drive.google.com/drive/folders/0B8DM6hczyKMbfkNvaU9LS3lLanpkS09GTExmTjR3TW0tZzBDYjlZd0ZRNkZKQUpHdERSZ28?usp=sharing"><button><img class="img-responsive" href="" src="images/buttons/CVUHSD-Course-Resources.png" alt="CVUHSD Course Resources (Google Drive)"></button></a>
-                    <a href="https://access.heropowered.com/school/login/"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"></button></a>
                 </div>
                 <div>
-                    <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)"></button></a>
-                    <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerTeacher (GradeBook &amp; Attendance)"></button></a>
-                    <a href="http://www.centinela.k12.ca.us/staff_only"><button><img class="img-responsive" href="" src="images/buttons/staff-only.png" alt="Restricted Staff Area (Staff Resources - District Website)"></button></a>
-                    <a href="https://teacher.goguardian.com/#/classrooms/active"><button><img class="img-responsive" href="" src="images/buttons/GoGuardian.png" alt="Go Guardian" title="Go Guardian"></button></a>
+                    <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerTeacher (GradeBook &amp; Attendance)"></button></a>
+                    <a href="http://www.centinela.k12.ca.us/staff_only" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/staff-only.png" alt="Restricted Staff Area (Staff Resources - District Website)"></button></a>
+                    <a href="https://drive.google.com/drive/folders/0B_ico1iiP8Effkp5RkE2VnlmSzIybW5YbVRqQnVXb3NZSFIwQ1IwcUdYbEZtNWlvLTJGZHM" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/ed-tech-resources.png" alt="Ed Tech Resources" title="Ed Tech Resources"></button></a>
+                    <a href="https://sites.google.com/a/cvuhsd.org/lwlaptopcartsystem/home" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/lawndale-laptop-cart-system.png" alt="Lawndale Laptop Cart System" title="Lawndale Laptop Cart System"></button></a>
+                    <a href="https://sites.google.com/a/cvuhsd.org/lzlaptopcartsystem/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/leuzinger-laptop-cart-system.png" alt="Leuzinger Laptop Cart System" title="Leuzinger Laptop Cart System"></button></a>
+                    <a href="https://sites.google.com/a/cvuhsd.org/hwlaptopcartsystem/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hawthorne-laptop-cart-system.png" alt="Hawthorne Laptop Cart System" title="Hawthorne Laptop Cart System"></button></a>
+                    <!-- <a href="" target="_blank"><button><img class="img-responsive" href="" src="images/buttons" alt="" title=""></button></a> -->
                 </div>
             </div>
         </section>
@@ -173,6 +176,9 @@
                 <a href="https://centinela.instructure.com/"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
                 <a href="https://centinela.learn.edgenuity.com/"><button><img class="img-responsive" href="" src="images/buttons/edgenuity.png" alt="Edgenuity (Online Courses)"></button></a>
                 <a href="https://turnitin.com/"><button><img class="img-responsive" href="" src="images/buttons/turnitin.png" alt="TurnItIn.com (Originality Check &amp; Feedback)"></button></a>
+                <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)" title="Illuminate (Assessments)"></button></a>
+                <a href="https://teacher.goguardian.com/#/classrooms/active"><button><img class="img-responsive" href="" src="images/buttons/GoGuardian.png" alt="Go Guardian" title="Go Guardian"></button></a>
+                <a href="https://access.heropowered.com/school/login/"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"  title="Hero (PBIS System)"></button></a>
             </div>
         </section>
 
