--- a/student.html
+++ b/student.html
@@ -80,10 +80,12 @@
                 </label>
             </div>
             <div class="row button-row" id="quickLinksButtonRow">
-                <a href="https://powerschool.centinela.k12.ca.us/public/"><button><img class="img-responsive" href="" src="images/buttons/PS-student.png" alt="PowerSchool Student/Parent Portal"></button></a>
-                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
-                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
-                <a href="https://centinela.instructure.com/"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
+                <a href="https://powerschool.centinela.k12.ca.us/public/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PS-student.png" alt="PowerSchool Student/Parent Portal"></button></a>
+                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
+                    target="_blank"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
+                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
+                    target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
+                <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
             </div>
         </section>
 
@@ -96,10 +98,12 @@
                 </label>
             </div>
             <div class="row button-row" id="standardStaffToolsButtonRow">
-                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
-                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
-                <a href="https://sso.centinela.k12.ca.us/adfs/ls/?wa=wsignin1.0&amp;wtrealm=https%3a%2f%2fmail.centinela.k12.ca.us%2fowa%2f&amp;wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f&amp;wct=2017-08-21T18%3a05%3a05Z"><button><img class="img-responsive" href="" src="images/buttons/password-portal.png" alt="Password Assistance"></button></a>
-                <a href="https://access.heropowered.com/school/login/"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"></button></a>
+                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
+                    target="_blank"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
+                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
+                    target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
+                <a href="https://updatemanager:9251/showLogin.cc" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/password-portal.png" alt="Password Assistance"></button></a>
+                <a href="https://access.heropowered.com/school/login/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"></button></a>
             </div>
         </section>
 
@@ -112,11 +116,11 @@
                 </label>
             </div>
             <div class="row button-row" id="classroomProgramsButtonRow">
-                <a href="https://centinela.instructure.com/"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
-                <a href="https://centinela.learn.edgenuity.com/"><button><img class="img-responsive" href="" src="images/buttons/edgenuity.png" alt="Edgenuity (Online Courses)"></button></a>
-                <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin"><button><img class="img-responsive" href="" src="images/buttons/Illuminate-Student.png" alt="Illuminate Student Portal"></button></a>
-                <a href="https://powerschool.centinela.k12.ca.us/"><button><img class="img-responsive" href="" src="images/buttons/PS-student.png" alt="PowerSchool Student/Parent Portal"></button></a>
-                <a href="https://turnitin.com/"><button><img class="img-responsive" href="" src="images/buttons/turnitin.png" alt="TurnItIn.com (Originality Check &amp; Feedback)"></button></a>
+                <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
+                <a href="https://centinela.learn.edgenuity.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/edgenuity.png" alt="Edgenuity (Online Courses)"></button></a>
+                <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Illuminate-Student.png" alt="Illuminate Student Portal"></button></a>
+                <a href="https://powerschool.centinela.k12.ca.us/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PS-student.png" alt="PowerSchool Student/Parent Portal"></button></a>
+                <a href="https://turnitin.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/turnitin.png" alt="TurnItIn.com (Originality Check &amp; Feedback)"></button></a>
             </div>
         </section>
 
@@ -129,11 +133,11 @@
                 </label>
             </div>
             <div class="row button-row" id="learningToolsButtonRow">
-                <a href="https://www.brainpop.com/"><button><img class="img-responsive" href="" src="images/buttons/BrainPop.png" alt="BrainPop"></button></a>
-                <a href="http://hwread180:55880/slms/StudentAccess"><button><img class="img-responsive" href="" src="images/buttons/Read180HW-Student.png" alt="Read 180/System 44-HW Teacher"></button></a>
-                <a href="http://lwread180:55880/slms/StudentAccess"><button><img class="img-responsive" href="" src="images/buttons/Read180LW-Student.png" alt="Read 180/System 44-LW Teacher"></button></a>
-                <a href="http://lzread180:55880/slms/StudentAccess"><button><img class="img-responsive" href="" src="images/buttons/Read180LZ-Student.png" alt="Read 180/System 44-LZ Teacher"></button></a>
-                <a href="https://schools.shmoop.com/login/centinela-valley-UHSD"><button><img class="img-responsive" href="" src="images/buttons/shmoop.png" alt="Shmoop"></button></a>
+                <a href="https://www.brainpop.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BrainPop.png" alt="BrainPop"></button></a>
+                <a href="http://hwread180:55880/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180HW-Student.png" alt="Read 180/System 44-HW Teacher"></button></a>
+                <a href="http://lwread180:55880/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LW-Student.png" alt="Read 180/System 44-LW Teacher"></button></a>
+                <a href="http://lzread180:55880/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LZ-Student.png" alt="Read 180/System 44-LZ Teacher"></button></a>
+                <a href="https://schools.shmoop.com/login/centinela-valley-UHSD" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/shmoop.png" alt="Shmoop"></button></a>
             </div>
         </section>
 
@@ -146,8 +150,8 @@
                 </label>
             </div>
             <div class="row button-row" id="digitalTextbooksButtonRow">
-                <a href="https://my.hrw.com/sp/access?sp=hrw&amp;connection=CA-CVUHSD-00067204"><button><img class="img-responsive" href="" src="images/buttons/HMH.png" alt="Holt McDougal (Online Textbooks)"></button></a>
-                <a href="https://learningsite.waysidepublishing.com/"><button><img class="img-responsive" href="" src="images/buttons/Wayside-Publishing.png" alt="Wayside Publishing" title="Wayside Publishing"></button></a>
+                <a href="https://my.hrw.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/HMH.png" alt="Holt McDougal (Online Textbooks)"></button></a>
+                <a href="https://learningsite.waysidepublishing.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Wayside-Publishing.png" alt="Wayside Publishing" title="Wayside Publishing"></button></a>
             </div>
         </section>
 
@@ -161,15 +165,15 @@
             </div>
             <div class="row button-row" id="mediaResourcesButtonRow">
                 <div>
-                    <a href="http://cvod.infobase.com/p_Home.aspx"><button><img class="img-responsive" href="" src="images/buttons/CVOD.png" alt="Classroom Video on Demand (Educational Video Streaming)"></button></a>
-                    <a href="http://search.ebscohost.com/"><button><img class="img-responsive" href="" src="images/buttons/EBSCO.png" alt="EBSCO (Research Databases)"></button></a>
-                    <a href="http://centinela.lib.overdrive.com/"><button><img class="img-responsive" href="" src="images/buttons/Overdrive.png" alt="Overdrive (Ebooks)"></button></a>
+                    <a href="http://cvod.infobase.com/p_Home.aspx" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/CVOD.png" alt="Classroom Video on Demand (Educational Video Streaming)"></button></a>
+                    <a href="http://search.ebscohost.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/EBSCO.png" alt="EBSCO (Research Databases)"></button></a>
+                    <a href="http://centinela.lib.overdrive.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Overdrive.png" alt="Overdrive (Ebooks)"></button></a>
                 </div>
 
                 <div>
-                    <a href="http://web.b.ebscohost.com/eon/search/basic?sid=a4eca46f-31e5-4e5b-a010-c8e57da30aeb%40sessionmgr102&amp;vid=0&amp;hid=125"><button><img class="img-responsive" href="" src="images/buttons/FlipsterLW.png" alt="Flipster LW (E-Magazines)"></button></a>
-                    <a href="http://web.b.ebscohost.com/eon/search/basic?sid=a4eca46f-31e5-4e5b-a010-c8e57da30aeb%40sessionmgr102&amp;vid=0&amp;hid=125"><button><img class="img-responsive" href="" src="images/buttons/FlipsterLZ.png" alt="Flipster LZ (E-Magazines)"></button></a>
-                    <a href="http://web.b.ebscohost.com/eon/search/basic?sid=10e9224c-4ef8-4d69-805f-55d64d31a26f%40sessionmgr103&amp;vid=0&amp;hid=125"><button><img class="img-responsive" href="" src="images/buttons/FlipsterHW.png" alt="Flipster HW (E-Magazines)"></button></a>
+                    <a href="http://web.b.ebscohost.com/eon/search/basic?sid=a4eca46f-31e5-4e5b-a010-c8e57da30aeb%40sessionmgr102&amp;vid=0&amp;hid=125" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/FlipsterLW.png" alt="Flipster LW (E-Magazines)"></button></a>
+                    <a href="http://web.b.ebscohost.com/eon/search/basic?sid=a4eca46f-31e5-4e5b-a010-c8e57da30aeb%40sessionmgr102&amp;vid=0&amp;hid=125" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/FlipsterLZ.png" alt="Flipster LZ (E-Magazines)"></button></a>
+                    <a href="http://web.b.ebscohost.com/eon/search/basic?sid=10e9224c-4ef8-4d69-805f-55d64d31a26f%40sessionmgr103&amp;vid=0&amp;hid=125" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/FlipsterHW.png" alt="Flipster HW (E-Magazines)"></button></a>
                 </div>
             </div>
         </section>
@@ -184,14 +188,14 @@
             </div>
             <div id="schoolWebsitesButtonRow" class="row">
                 <div>
-                    <a href="https://www.centinela.k12.ca.us/"><button><img class="img-responsive" href="" src="images/buttons/CV-Website.png" alt="CV Website"></button></a>
-                    <a href="https://www.cvalternatives.org/"><button><img class="img-responsive" href="" src="images/buttons/CVISS-Website.png" alt="CVISS Website"></button></a>
-                    <a href="https://www.lloydehs.org"><button><img class="img-responsive" href="" src="images/buttons/LL-Website.png" alt="Lloyde Website"></button></a>
+                    <a href="https://www.centinela.k12.ca.us/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/CV-Website.png" alt="CV Website"></button></a>
+                    <a href="https://www.cvalternatives.org/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/CVISS-Website.png" alt="CVISS Website"></button></a>
+                    <a href="https://www.lloydehs.org" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/LL-Website.png" alt="Lloyde Website"></button></a>
                 </div>
                 <div>
-                    <a href="https://www.lawndalehs.org/"><button><img class="img-responsive" href="" src="images/buttons/LW-Website.png" alt="Lawndale Website"></button></a>
-                    <a href="https://www.leuzinger.org/"><button><img class="img-responsive" href="" src="images/buttons/LZ-Website.png" alt="Leuzinger Website"></button></a>
-                    <a href="https://www.hhscougars.org/"><button><img class="img-responsive" href="" src="images/buttons/HW-Website.png" alt="Hawthorne Website"></button></a>
+                    <a href="https://www.lawndalehs.org/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/LW-Website.png" alt="Lawndale Website"></button></a>
+                    <a href="https://www.leuzinger.org/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/LZ-Website.png" alt="Leuzinger Website"></button></a>
+                    <a href="https://www.hhscougars.org/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/HW-Website.png" alt="Hawthorne Website"></button></a>
                 </div>
             </div>
             <!-- /.schoolWebsitesButtonRow -->
@@ -235,7 +239,7 @@
                     <a href="https://www.hhscougars.org/">Hawthorne Website</a>
                     <a href="https://helpdesk.centinela.k12.ca.us/">Helpdesk (CV IT Department)</a>
                     <a href="https://herok12.com/">HERO (PBIS)</a>
-                    <a href="https://my.hrw.com/sp/access?sp=hrw&amp;connection=CA-CVUHSD-00067204">Holt McDougal (Online Textbooks)</a>
+                    <a href="https://my.hrw.com/">Holt McDougal (Online Textbooks)</a>
                     <a href="https://centinela.illuminateed.com/">Illuminate Assessments</a>
                     <a href="https://www.lawndalehs.org/">Lawndale Website</a>
                     <a href="https://www.leuzinger.org/">Leuzinger Website</a>
