Rearranged buttons from the Quick Links Section and these other ones from the Staff Portal to give the page a better appearance

--- a/staff.html
+++ b/staff.html
@@ -89,14 +89,18 @@
                 </label>
             </div>
             <div class="row button-row" id="quickLinksButtonRow">
-                <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerSchool Teacher" alt="PowerSchool Teacher"></button></a>
-                <a href="https://sso.centinela.k12.ca.us/adfs/ls/?wa=wsignin1.0&amp;wtrealm=https%3a%2f%2fmail.centinela.k12.ca.us%2fowa%2f&amp;wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f&amp;wct=2017-08-21T18%3a05%3a05Z" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/outlook.png" alt="Outlook Email"></button></a>
-                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
-                    target="_blank"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
-                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
-                    target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
-                <a href="https://cvprintcenter.myprintdesk.net/DSF/smartstore.aspx#!/Storefront" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/print-center.png" alt="Print Center"></button></a>
-                <a href="https://helpdesk.centinela.k12.ca.us" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/helpdesk.png" alt="Helpdesk (CV It Department)"></button></a>
+                <div>
+                    <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerSchool Teacher" alt="PowerSchool Teacher"></button></a>
+                    <a href="https://sso.centinela.k12.ca.us/adfs/ls/?wa=wsignin1.0&amp;wtrealm=https%3a%2f%2fmail.centinela.k12.ca.us%2fowa%2f&amp;wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f&amp;wct=2017-08-21T18%3a05%3a05Z" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/outlook.png" alt="Outlook Email"></button></a>
+                    <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
+                        target="_blank"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
+                </div>
+                <div>
+                    <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
+                        target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
+                    <a href="https://cvprintcenter.myprintdesk.net/DSF/smartstore.aspx#!/Storefront" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/print-center.png" alt="Print Center"></button></a>
+                    <a href="https://helpdesk.centinela.k12.ca.us" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/helpdesk.png" alt="Helpdesk (CV It Department)"></button></a>
+                </div>
             </div>
         </section>
 
@@ -160,10 +164,12 @@
                     <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerTeacher (GradeBook &amp; Attendance)"></button></a>
                     <a href="http://www.centinela.k12.ca.us/staff_only" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/staff-only.png" alt="Restricted Staff Area (Staff Resources - District Website)"></button></a>
                     <a href="https://drive.google.com/drive/folders/0B_ico1iiP8Effkp5RkE2VnlmSzIybW5YbVRqQnVXb3NZSFIwQ1IwcUdYbEZtNWlvLTJGZHM" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/ed-tech-resources.png" alt="Ed Tech Resources" title="Ed Tech Resources"></button></a>
+                    <!-- <a href="" target="_blank"><button><img class="img-responsive" href="" src="images/buttons" alt="" title=""></button></a> -->
+                </div>
+                <div>
                     <a href="https://sites.google.com/a/cvuhsd.org/lwlaptopcartsystem/home" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/lawndale-laptop-cart-system.png" alt="Lawndale Laptop Cart System" title="Lawndale Laptop Cart System"></button></a>
                     <a href="https://sites.google.com/a/cvuhsd.org/lzlaptopcartsystem/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/leuzinger-laptop-cart-system.png" alt="Leuzinger Laptop Cart System" title="Leuzinger Laptop Cart System"></button></a>
                     <a href="https://sites.google.com/a/cvuhsd.org/hwlaptopcartsystem/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hawthorne-laptop-cart-system.png" alt="Hawthorne Laptop Cart System" title="Hawthorne Laptop Cart System"></button></a>
-                    <!-- <a href="" target="_blank"><button><img class="img-responsive" href="" src="images/buttons" alt="" title=""></button></a> -->
                 </div>
             </div>
         </section>
@@ -177,12 +183,16 @@
                 </label>
             </div>
             <div class="row button-row" id="classroomProgramsButtonRow">
-                <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
-                <a href="https://centinela.learn.edgenuity.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/edgenuity.png" alt="Edgenuity (Online Courses)"></button></a>
-                <a href="https://turnitin.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/turnitin.png" alt="TurnItIn.com (Originality Check &amp; Feedback)"></button></a>
-                <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)" title="Illuminate (Assessments)"></button></a>
-                <a href="https://teacher.goguardian.com/#/classrooms/active" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/GoGuardian.png" alt="Go Guardian" title="Go Guardian"></button></a>
-                <a href="https://access.heropowered.com/school/login/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"  title="Hero (PBIS System)"></button></a>
+                <div>
+                    <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
+                    <a href="https://centinela.learn.edgenuity.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/edgenuity.png" alt="Edgenuity (Online Courses)"></button></a>
+                    <a href="https://turnitin.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/turnitin.png" alt="TurnItIn.com (Originality Check &amp; Feedback)"></button></a>
+                </div>
+                <div>
+                    <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)" title="Illuminate (Assessments)"></button></a>
+                    <a href="https://teacher.goguardian.com/#/classrooms/active" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/GoGuardian.png" alt="Go Guardian" title="Go Guardian"></button></a>
+                    <a href="https://access.heropowered.com/school/login/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"  title="Hero (PBIS System)"></button></a>
+                </div>
             </div>
         </section>
 
