Added loading spinner to the search pop-up on the Staff portal page. The load spinner activates when a user begins to type inside the input box.

--- a/staff.html
+++ b/staff.html
@@ -86,8 +86,8 @@
             <form>
                 <p>
                     <!-- Search -->
-                    <label for="device-id-field"><strong id="search-modal-text">Search:</strong></label>
-                    <input type="search" class="nav-popup-input-field" id="device-id-field">
+                    <label for="search-field"><strong id="search-modal-text">Search:</strong></label>
+                    <input type="search" class="nav-popup-input-field" id="search-field">
                 </p>
 
                 <div id="search-modal-load-indicator">
@@ -381,6 +381,9 @@
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
+    <!-- Note: Language attribute is deprecated! -->
+    <script language="javascript" type="text/javascript" src="js/search.js">
+    </script>
 </body>
 
 </html>
