Commit before Adding Troubleshooting Navigation Link
Creating a commit before adding the navigation link with the
troubleshooting tutorials.

--- a/student.html
+++ b/student.html
@@ -150,7 +150,7 @@
                 </label>
             </div>
             <div class="row button-row" id="digitalTextbooksButtonRow">
-                <a href="https://my.hrw.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/HMH.png" alt="Holt McDougal (Online Textbooks)"></button></a>
+                <a href="https://my.hrw.com/sp/access?sp=hrw&connection=CA-CVUHSD-00067204" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/HMH.png" alt="Holt McDougal (Online Textbooks)"></button></a>
                 <a href="https://learningsite.waysidepublishing.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Wayside-Publishing.png" alt="Wayside Publishing" title="Wayside Publishing"></button></a>
             </div>
         </section>
@@ -239,7 +239,7 @@
                     <a href="https://www.hhscougars.org/">Hawthorne Website</a>
                     <a href="https://helpdesk.centinela.k12.ca.us/">Helpdesk (CV IT Department)</a>
                     <a href="https://herok12.com/">HERO (PBIS)</a>
-                    <a href="https://my.hrw.com/">Holt McDougal (Online Textbooks)</a>
+                    <a href="https://my.hrw.com/sp/access?sp=hrw&connection=CA-CVUHSD-00067204">Holt McDougal (Online Textbooks)</a>
                     <a href="https://centinela.illuminateed.com/">Illuminate Assessments</a>
                     <a href="https://www.lawndalehs.org/">Lawndale Website</a>
                     <a href="https://www.leuzinger.org/">Leuzinger Website</a>
