--- a/staff.html
+++ b/staff.html
@@ -69,36 +69,9 @@
                     <li>
                         <a href="#allTools-blueSection">All Links</a>
                     </li>
-                    <li>
-                        <!-- Search Icon -->
-                        <label for="search-toggle">
-                            <i id="nav-search-icon" class="fa fa-search" aria-hidden="true"></i>
-                        </label>
-                    </li>
                 </ul>
             </nav>
         </header>
-
-        <!-- CSS Checkbox Hack -->
-        <input type="checkbox" class="checkbox-hack" id="search-toggle">
-        <!-- Search Box Section -->
-        <section class="pop-up-modal" id="search-modal">
-            <form>
-                <p>
-                    <!-- Search -->
-                    <label for="search-field"><strong id="search-modal-text">Search:</strong></label>
-                    <input type="search" class="nav-popup-input-field" id="search-field">
-                </p>
-
-                <div id="search-modal-load-indicator">
-                    <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw"></i>
-                </div>
-                <span class="sr-only">Loading...</span>
-
-                <!-- <center><button type="submit" class="search-button">Search</button></center> -->
-
-            </form>
-        </section>
 
         <div class="staff-dashboard-header-container" id="back-to-top">
             <header class="staff-dashboard-header">
@@ -107,20 +80,6 @@
             </header>
         </div>
 
-        <section class="blue-section" id="searchResults-blueSection">
-            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="searchResults-collapseToggle" checked="">
-            <div class="section-header">
-                <h3 id="search-results-header">Search Results</h3>
-                <label for="searchResults-collapseToggle">
-                    <div class="open-column-button"></div>
-                </label>
-            </div>
-            <div class="row button-row" id="searchResultsButtonRow">
-
-            </div>
-        </section>
-
-        <!-- Quick Links section -->
         <section class="blue-section" id="quickLinks-blueSection">
             <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle" checked="">
             <div class="section-header">
@@ -131,18 +90,20 @@
             </div>
             <div class="row button-row" id="quickLinksButtonRow">
                 <div>
-                    <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank" data-title="Power Teacher" data-keywords="Attendance Gradebook power teacher" class="buttonLink" id="sampleLink"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerSchool Teacher" alt="PowerSchool Teacher"></button></a>
-                    <a href="https://sso.centinela.k12.ca.us/adfs/ls/?wa=wsignin1.0&amp;wtrealm=https%3a%2f%2fmail.centinela.k12.ca.us%2fowa%2f&amp;wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f&amp;wct=2017-08-21T18%3a05%3a05Z" target="_blank" data-keywords="Attendance Gradebook power teacher"
-                        data-title="Outlook Email" data-keywords="check online mail" class="buttonLink" id="sampleLink2"><button><img class="img-responsive" href="" src="images/buttons/outlook.png" alt="Outlook Email"></button></a>
-                    <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
-                        data-title="Gmail" data-keywords="check online google mail gmail" class="buttonLink" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
-                </div>
+                    <a href="https://sso.centinela.k12.ca.us/adfs/ls/?wa=wsignin1.0&amp;wtrealm=https%3a%2f%2fmail.centinela.k12.ca.us%2fowa%2f&amp;wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f&amp;wct=2017-08-21T18%3a05%3a05Z" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/outlook.png" alt="Outlook Email"></button></a>
+					 <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
+					<a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)" title="Illuminate (Assessments)"></button></a>
+					 <a href="https://access.heropowered.com/login/centinelavalley-usd" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"  title="Hero (PBIS System)"></button></a>
+		</div>
                 <div>
+		    <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerSchool Teacher" alt="PowerSchool Teacher"></button></a>
                     <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
                         target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
                     <a href="https://cvprintcenter.myprintdesk.net/DSF/smartstore.aspx#!/Storefront" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/print-center.png" alt="Print Center"></button></a>
                     <a href="https://helpdesk.centinela.k12.ca.us" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/helpdesk.png" alt="Helpdesk (CV It Department)"></button></a>
-                </div>
+            	    <a href="https://portal.office.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/office365.png" alt="Office 365 Login"></button></a>    
+		</div>
+		
             </div>
         </section>
 
@@ -233,7 +194,7 @@
                 <div>
                     <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)" title="Illuminate (Assessments)"></button></a>
                     <a href="https://teacher.goguardian.com/#/classrooms/active" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/GoGuardian.png" alt="Go Guardian" title="Go Guardian"></button></a>
-                    <a href="https://access.heropowered.com/school/login/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"  title="Hero (PBIS System)"></button></a>
+                    <a href="https://access.heropowered.com/login/centinelavalley-usd" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"  title="Hero (PBIS System)"></button></a>
                 </div>
             </div>
         </section>
@@ -264,7 +225,7 @@
                 </label>
             </div>
             <div class="row button-row" id="digitalTextbooksButtonRow">
-                <a href="https://my.hrw.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/HMH.png" alt="Holt McDougal (Online Textbooks)"></button></a>
+                <a href="https://my.hrw.com/sp/access?sp=hrw&connection=CA-CVUHSD-00067204" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/HMH.png" alt="Holt McDougal (Online Textbooks)"></button></a>
                 <a href="https://learningsite.waysidepublishing.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Wayside-Publishing.png" alt="Wayside Publishing" title="Wayside Publishing"></button></a>
             </div>
         </section>
@@ -366,7 +327,7 @@
                 <a href="https://www.hhscougars.org/">Hawthorne Website</a>
                 <a href="https://helpdesk.centinela.k12.ca.us/">Helpdesk (CV IT Department)</a>
                 <a href="https://herok12.com/">HERO (PBIS)</a>
-                <a href="https://my.hrw.com/">Holt McDougal (Online Textbooks)</a>
+                <a href="https://my.hrw.com/sp/access?sp=hrw&connection=CA-CVUHSD-00067204">Holt McDougal (Online Textbooks)</a>
                 <a href="https://centinela.illuminateed.com/">Illuminate Assessments</a>
                 <a href="https://www.lawndalehs.org/">Lawndale Website</a>
                 <a href="https://www.leuzinger.org/">Leuzinger Website</a>
@@ -396,8 +357,6 @@
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
-    <!-- Note: Language attribute is deprecated! -->
-    <script type="text/javascript" src="js/search.js"></script>
 </body>
 
 </html>
