Provide basic HTML skeleton for each step of the troubleshooting page.

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -92,7 +92,16 @@
                 </label>
             </div>
             <div class="row button-row" id="quickLinksButtonRow">
+                <h4>Connecting to Centinela Wi-Fi</h4>
+                <h5>Chromebook Edition</h5>
 
+                <button>01 of 02</button>
+                <h6>Locate &amp; Select Network</h6>
+                <figure>
+                    <img src="" alt="" class="img-responsive" />
+                    <figcaption></figcaption>
+                </figure>
+                <a href=""><button>Download</button></a>
             </div>
         </section>
 
