Added images from PDF and text in figcaption

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -98,10 +98,12 @@
                 <button>01 of 02</button>
                 <h6>Locate &amp; Select Network</h6>
                 <figure>
-                    <img src="" alt="" class="img-responsive" />
-                    <figcaption></figcaption>
+                    <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="" class="img-responsive" />
+                    <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="" class="img-responsive" />
+                    <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="" class="img-responsive" />
+                    <figcaption>Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
                 </figure>
-                <a href=""><button>Download</button></a>
+                <a href=""><button>Download Connecting to Centinela Wi-Fi Tutorial</button></a>
             </div>
         </section>
 
