Starting adding in some CSS

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -91,20 +91,25 @@
                     <div class="open-column-button"></div>
                 </label>
             </div>
-            <div class="row button-row" id="quickLinksButtonRow">
+            <div class="row button-row centWiFiTut" id="quickLinksButtonRow">
                 <h4>Connecting to Centinela Wi-Fi</h4>
                 <h5>Chromebook Edition</h5>
 
-                <button>01 of 02</button>
-                <h6>Locate &amp; Select Network</h6>
+                <div>
+                    <p>01 <span>of 02</span></p>
+                    <h6>Locate &amp; Select Network</h6>
+                </div>
+
                 <figure>
-                    <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="" class="img-responsive" />
-                    <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="" class="img-responsive" />
-                    <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="" class="img-responsive" />
+                    <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="" class="img-responsive tutImage" />
+                    <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="" class="img-responsive tutImage" />
                     <figcaption>Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
                 </figure>
                 <a href=""><button>Download Connecting to Centinela Wi-Fi Tutorial</button></a>
             </div>
+            <p><span>02</span> of 02</p>
+            <h6>Enter Credentials &amp; Connect</h6>
+            <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="" class="img-responsive tutImage" />
         </section>
 
         <!-- /. container-fluid -->
