Added CSS to style the header of each step of the tutorial

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -92,13 +92,15 @@
                 </label>
             </div>
             <div class="row button-row centWiFiTut" id="quickLinksButtonRow">
-                <h4>Connecting to Centinela Wi-Fi</h4>
-                <h5>Chromebook Edition</h5>
+                <header>
+                    <h4 class="tutorialTitle">Connecting to Centinela Wi-Fi</h4>
+                    <h5 class="tutorialTitle-edition">Chromebook Edition</h5>
+                </header>
 
-                <div>
+                <header class="tutStepHeader">
                     <p>01 <span>of 02</span></p>
                     <h6>Locate &amp; Select Network</h6>
-                </div>
+                </header>
 
                 <figure>
                     <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="" class="img-responsive tutImage" />
@@ -107,8 +109,12 @@
                 </figure>
                 <a href=""><button>Download Connecting to Centinela Wi-Fi Tutorial</button></a>
             </div>
-            <p><span>02</span> of 02</p>
-            <h6>Enter Credentials &amp; Connect</h6>
+
+            <header class="tutStepHeader">
+                <p>02 <span>of 02</span></p>
+                <h6>Enter Credentials &amp; Connect</h6>
+            </header>
+
             <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="" class="img-responsive tutImage" />
         </section>
 
